--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <!-- <link rel="icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alquiler de grúas telescópicas | Gruas Ememca</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./src/App.css" />
   </head>
   <body>
